[gd_scene load_steps=5 format=3 uid="uid://dgv0ai283b3pn"]

[ext_resource type="Script" uid="uid://c5k4ff7elxh0d" path="res://scenes/inventory_component.gd" id="1_cgqxk"]
[ext_resource type="AudioStream" uid="uid://dx4i3kpmj8li3" path="res://sfx/628846__greatsoundstube__pouring-milk-in-to-metal-jug.mp3" id="2_aeav0"]
[ext_resource type="AudioStream" uid="uid://iivgui6qd4pg" path="res://sfx/615553__joalukashalt__can-open.mp3" id="3_7278t"]
[ext_resource type="AudioStream" uid="uid://dflhargbjt888" path="res://sfx/406244__stubb__telephone_pick-up_near_mono.mp3" id="4_7278t"]

[node name="InventoryComponent" type="Node3D"]
script = ExtResource("1_cgqxk")

[node name="GasolineAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_aeav0")
pitch_scale = 2.0

[node name="MothsterAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_7278t")

[node name="PickupAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_7278t")
